cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug217052.cpp
class A {
    virtual ~A() override {
    }
};